--- a/Example.html
+++ b/Example.html
@@ -6,7 +6,7 @@
   </head>
   <body  onload="FBPageLoad()">
     <center>
-      <h1> Firebase Recooncet Rulez!</h1>
+      <h1> Firebase Reconncet Rulez!</h1>
       <h3>By <a href="http://www.danielziv.co">Daniel Ziv</a></h3>
     </center>
   </body>
